# DevTrackr

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mongo-init.js  フロントエンド技術メモ.md  要件定義.md
.github/workflows/: rust.yml
backend/: .env.test  .env.test.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  deny.toml
backend/src/: README.md  lib.rs  main.rs  query_params.rs  request_params.rs  routes.rs
backend/src/adapters/: async_queue.rs  async_queue_adapter.rs  async_queue_worker.rs  http_client.rs  mod.rs
backend/src/api/: common.rs  mod.rs  routes.rs
backend/src/api/endpoints/: auth.rs  companies.rs  projects.rs  users.rs  work_logs.rs
backend/src/clients/: aws_s3.rs  mod.rs  redis.rs
backend/src/common/: response_builder.rs  response_formatter.rs
backend/src/common/dto/: mod.rs  response.rs  response_builder.rs  response_formatter.rs
backend/src/config/: api_doc.rs  db.rs  db_index.rs  di.rs  mod.rs  rate_limit.rs  redis.rs  s3.rs
backend/src/constants/: mod.rs  mongo_error_codes.rs
backend/src/controllers/: posts.rs
backend/src/dto/: mod.rs  response_builder.rs
backend/src/dto/requests/: mod.rs  work_logs.rs
backend/src/dto/responses/: auth.rs  companies.rs  mod.rs  projects.rs  users.rs  work_logs.rs  working_time.rs  working_times.rs
backend/src/endpoints/: auth.rs  companies.rs  mod.rs  posts.rs  projects.rs  work_logs.rs  working_times.rs
backend/src/errors/: app_error.rs  mod.rs  project_error.rs  repositories_error.rs  working_time_error.rs
backend/src/middleware/: cors.rs  csrf.rs  jwt.rs  mod.rs  rate_limit.rs  response_formatter.rs  security_headers.rs  session.rs
backend/src/models/: auth.rs  companies.rs  mod.rs  posts.rs  projects.rs  user.rs  users.rs  work_logs.rs  working_time.rs  working_times.rs
backend/src/repositories/: auth.rs  companies.rs  posts.rs  projects.rs  work_logs.rs  working_time.rs  working_times.rs
backend/src/services/: posts.rs  s3_service.rs
backend/src/usecases/: auth.rs  companies.rs  mod.rs  posts.rs  projects.rs  work_logs.rs  working_time.rs  working_times.rs
backend/src/utils/: cookie_util.rs  datetime.rs  deserializer.rs  init_data.rs  jwt.rs  mod.rs  password.rs  redis_client.rs  serializer.rs  test_s3_upload.rs
backend/tests/: README.md  lib.rs
backend/tests/api/: auth.rs  mod.rs
backend/tests/api/auth/: login.rs  mod.rs  register.rs  test_login.rs  test_logout.rs  test_refresh.rs  test_register.rs
backend/tests/api/companies/: helper.rs  test_create.rs  test_get.rs  test_update.rs
backend/tests/api/helper/: validation.rs
backend/tests/api/projects/: helper.rs  mod.rs  test_create.rs  test_get.rs  test_update.rs
backend/tests/api/users/: mod.rs  test_get.rs  test_update.rs
backend/tests/api/work_logs/: helper.rs  test_create.rs  test_get.rs  test_update.rs
backend/tests/common/: mod.rs  test_app.rs  test_context.rs  test_db.rs  test_routes.rs
backend/tmp/auth/: test_refresh.rs
backend/tmp/companies/: mod.rs  test_create.rs  test_get.rs  test_update.rs
backend/traefik/: traefik.yml
frontend/: Dockerfile  middleware.ts  next.config.mjs  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/auth/: page.tsx
frontend/app/configure/: layout.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/components/atoms/: SkillIcon.tsx  StatusBadge.tsx  TruncatedText.tsx
frontend/components/core/: ActiveLink.tsx  AtomsButtonWithIcon.tsx  FormField.tsx  LoadingSkeleton.tsx  NavigationBar.tsx  StatusBadge.tsx
frontend/components/layouts/: LayoutDashboardHeader.tsx  LayoutDashboardNavigation.tsx
frontend/components/molecules/: FormField.tsx  NavigationBar.tsx  PageTitle.tsx
frontend/components/organisms/: ProjectSelectDialog.tsx
frontend/components/ui/: button.tsx  calendar.tsx  dialog.tsx  dropdown-menu.tsx  select.tsx  toast.tsx
frontend/lib/actions/: auth.ts  user.ts  worklog.ts
frontend/lib/api/: auth.ts  companies.ts  core.ts  projects.ts  user.ts
frontend/lib/constants/: ProjectStatusColors.ts  WorkLogDialog.ts
frontend/stores/: contractsStore.ts  organizationStore.ts
frontend/types/: company.ts  next-auth.d.ts  project.ts  user.ts  worklog.ts
welcome/: index.html
(+106 files in other folders)
