[package]
name = "devtrackr_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-csrf = "0.7.0"
actix-rt = "2.10.0"
# cookie-sessionを使用する場合はfeaturesにcookie-sessionを指定する必要があるので注意
actix-session = { version = "0.7.0", features = ["redis-rs-tls-session"] }
actix-web = "4.8.0"
actix-web-httpauth = "0.8.2"
aes-gcm = "0.10.3"
anyhow = "1.0.86"
async-trait = "0.1.82"
aws-config = "1.5.8"
aws-sdk-s3 = { version = "1.56.0", features = ["behavior-version-latest"] }
base64 = "0.22.1"
bcrypt = "0.15.1"
bson = { version = "2.12.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.10.0"
dotenvy = "0.15"
env_logger = "0.11.5"
futures = "0.3.30"
image = "0.25.0"
jsonwebtoken = "9.3.0"
log = "0.4.22"
mongodb = { version = "2.7.0", features = ["tokio-runtime"] }
openssl = { version = "0.10.66", features = ["vendored"] }
rand = "0.8.5"
redis = { version = "0.27.2", features = ["tokio-comp"] }
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
serde_with = "3.9.0"
thiserror = "1.0.63"
tokio = { version = "1.0", features = ["full"] }
utoipa = { version = "4.2.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }
uuid = "1.10.0"
validator = { version = "0.18.1", features = ["derive"] }
